# kuka_experimental

./: .travis.rosinstall  .travis.yml
kuka_rsi_hw_interface/: CMakeLists.txt  kuka_hardware_interface_plugin.xml  package.xml
kuka_rsi_hw_interface/config/: hardware_controllers.yaml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h  kuka_hardware_interface_with_fts.h  rsi_state.h
kuka_rsi_hw_interface/krl/KR_C2/: ros_rsi_110_fts.src  ros_rsi_110_fts.xml
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp  kuka_hardware_interface_with_fts.cpp
